--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@
         font-size: 14px; } }
   #soc i {
     font-size: 40px;
-    color: white;
+    color: #ff000d;
     margin: 0 0 0 0.5em;
     max-height: 1em;
     transition: all 0.5s; }
