--- a/scss/header.scss
+++ b/scss/header.scss
@@ -65,7 +65,7 @@
 
   i {
     font-size:40px;
-    color: white;
+    color: #ff000d;
     margin: 0 0 0 0.5em;
     max-height: 1em;
     transition: all 0.5s;
