--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,13 +15,8 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-main {
 
-}
-
-
-
-/* -------------------------------------------------------------- */
+/* ---------------------------- */
 .sliderContainer {
   position:relative;
 }
@@ -101,11 +96,10 @@ div.column {
 
 
   #text {
-    text-transform: uppercase;
     //font-size:25px;
     font-weight: bold;
     //letter-spacing: 5px;
-    color: #5893FC;
+    //color: #5893FC;
   }
 
 
