--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -22,10 +22,11 @@ body {
 }
 
 .misprintWrapper {
-  width:90vw;
-  margin:auto;
+  width:calc(100vw - 120px);
+  margin:0 auto 100px auto;
   overflow: hidden;
   position:relative;
+
 }
 
 #prev-btn, #next-btn {
@@ -38,7 +39,7 @@ body {
 
 #prev-btn-ap, #next-btn-ap {
   position: absolute;
-  width: 50px;
+  width: 40px;
   height: 50px;
   border-radius: 50%;
   top: calc(50% - 25px);
@@ -50,11 +51,11 @@ body {
 }
 
 #prev-btn, #prev-btn-ap {
-  left: 10px;
+  left: 5px;
 }
 
 #next-btn, #next-btn-ap {
-  right: 10px;
+  right: 5px;
 }
 
 
@@ -76,6 +77,11 @@ body {
 
 div.column {
   border-right: 1px solid lightgrey;
+  height:80vh;
+  overflow-y: auto;
+  @media(max-width:500px){
+    margin-left:10px;
+  }
 }
 
 #ap_MisprintButtons {
@@ -91,21 +97,18 @@ div.column {
   width: 50%;
   margin: auto;
   font-size: 20px;
+  @media(max-width:500px){
+    width:90%;
+  }
 }
 
-
-
   #text {
-    //font-size:25px;
     font-weight: bold;
-    //letter-spacing: 5px;
-    //color: #5893FC;
   }
 
 
   .misprint {
     padding:2px;
-    //font-family: 'Caveat', cursive;
     font-family: 'Bad Script', cursive;
     font-weight:bold;
     font-size:25px;
