--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,6 +15,20 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+.desk {
+  display:block;
+  @media(max-width:500px) and (orientation:portrait){
+    display:none;
+  }
+}
+
+.mob {
+  display:none;
+  @media(max-width:500px) and (orientation:portrait){
+    display:block;
+  }
+}
+
 
 /* ---------------------------- */
 .sliderContainer {
@@ -84,6 +98,10 @@ div.column {
   }
 }
 
+div.column-mob {
+  margin-left:10%;
+}
+
 #ap_MisprintButtons {
   width:90%;
   margin:0 5%;
@@ -122,7 +140,7 @@ div.column {
     margin-bottom:5px;
     //background-color: #5893FC;
     cursor: pointer;
-    padding: 10px;
+    padding: 10px 0;
     width: auto;
     border: none;
     text-align: left;
@@ -131,7 +149,7 @@ div.column {
 
 
 .hideElem {
-  //display:none;
+  display:none;
 }
 
 .misprintCases {
