--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -63,6 +63,10 @@ header {
 
 
 /* ---------- main ------------------ */
+h2 {
+  margin-top:100px;
+}
+
   .sliderContainer {
     position:relative;
   }
