--- a/css/styles.css
+++ b/css/styles.css
@@ -294,13 +294,13 @@ body {
 
 .desk {
   display: block; }
-  @media (max-width: 500px) and (orientation: portrait) {
+  @media (max-width: 800px) and (orientation: portrait) {
     .desk {
       display: none; } }
 
 .mob {
   display: none; }
-  @media (max-width: 500px) and (orientation: portrait) {
+  @media (max-width: 800px) and (orientation: portrait) {
     .mob {
       display: block; } }
 
@@ -310,7 +310,7 @@ header {
   display: grid;
   grid-template-columns: 45% 40% auto;
   margin-bottom: 100px; }
-  @media (max-width: 500px) and (orientation: portrait) {
+  @media (max-width: 800px) and (orientation: portrait) {
     header {
       margin-bottom: 30px; } }
   header img {
@@ -318,16 +318,21 @@ header {
     grid-column: 1/-1;
     grid-row: 1/2;
     opacity: 0.5; }
-    @media (max-width: 500px) and (orientation: portrait) {
+    @media (max-width: 800px) and (orientation: portrait) {
       header img {
         opacity: 1; } }
   header #title {
+    width: 100%;
+    line-height: 1.3;
     color: white;
     margin: auto 100px auto auto;
     font-size: 40pt;
     z-index: 1000000;
     grid-column: 2/3;
     grid-row: 1/2; }
+    @media (max-width: 1200px) {
+      header #title {
+        font-size: 35pt; } }
 
 /* ---------- main ------------------ */
 h2 {
@@ -386,7 +391,7 @@ div.column {
   border-right: 1px solid lightgrey;
   height: 80vh;
   overflow-y: auto; }
-  @media (max-width: 500px) {
+  @media (max-width: 800px) {
     div.column {
       margin-left: 10px; } }
 
@@ -404,7 +409,7 @@ div.column-mob {
   width: 45%;
   margin: auto;
   font-size: 20px; }
-  @media (max-width: 500px) {
+  @media (max-width: 800px) {
     .textContent {
       width: 90%; } }
 
