--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,14 +18,14 @@ body {
 
 .desk {
   display:block;
-  @media(max-width:500px) and (orientation:portrait){
+  @media(max-width:800px) and (orientation:portrait){
     display:none;
   }
 }
 
 .mob {
   display:none;
-  @media(max-width:500px) and (orientation:portrait){
+  @media(max-width:800px) and (orientation:portrait){
     display:block;
   }
 }
@@ -37,7 +37,7 @@ header {
   display:grid;
   grid-template-columns: 45% 40% auto;
   margin-bottom: 100px;
-  @media(max-width:500px) and (orientation:portrait){
+  @media(max-width:800px) and (orientation:portrait){
     margin-bottom: 30px;
   }
 
@@ -46,18 +46,23 @@ header {
     grid-column: 1/-1;
     grid-row:1/2;
     opacity:0.5;
-    @media(max-width:500px) and (orientation:portrait){
+    @media(max-width:800px) and (orientation:portrait){
       opacity:1;
     }
   }
 
   #title {
+    width:100%;
+    line-height: 1.3;
     color:white;
     margin: auto 100px auto auto;
     font-size:40pt;
     z-index: 1000000;
     grid-column: 2/3;
     grid-row:1/2;
+    @media(max-width:1200px){
+      font-size:35pt;
+    }
   }
 }
 
@@ -131,7 +136,7 @@ h2 {
     border-right: 1px solid lightgrey;
     height:80vh;
     overflow-y: auto;
-    @media(max-width:500px){
+    @media(max-width:800px){
       margin-left:10px;
     }
   }
@@ -153,7 +158,7 @@ h2 {
     width: 45%;
     margin: auto;
     font-size: 20px;
-    @media(max-width:500px){
+    @media(max-width:800px){
       width:90%;
     }
   }
