--- a/css/styles.css
+++ b/css/styles.css
@@ -323,16 +323,21 @@ header {
         opacity: 1; } }
   header #title {
     width: 100%;
-    line-height: 1.3;
+    line-height: 1.5;
     color: white;
     margin: auto 100px auto auto;
-    font-size: 40pt;
     z-index: 1000000;
     grid-column: 2/3;
     grid-row: 1/2; }
-    @media (max-width: 1200px) {
-      header #title {
-        font-size: 35pt; } }
+
+h1 {
+  font-size: 40pt; }
+  @media (min-width: 801px) {
+    h1 {
+      font-size: 35pt; } }
+  @media (max-width: 800px) {
+    h1 {
+      font-size: 25pt; } }
 
 /* ---------- main ------------------ */
 h2 {
