--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -53,16 +53,22 @@ header {
 
   #title {
     width:100%;
-    line-height: 1.3;
+    line-height: 1.5;
     color:white;
     margin: auto 100px auto auto;
-    font-size:40pt;
     z-index: 1000000;
     grid-column: 2/3;
     grid-row:1/2;
-    @media(max-width:1200px){
-      font-size:35pt;
-    }
+  }
+}
+
+h1 {
+  font-size:40pt;
+  @media(min-width:801px){
+    font-size:35pt;
+  }
+  @media(max-width:800px){
+    font-size:25pt;
   }
 }
 
