--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -41,6 +41,7 @@ header {
     margin-bottom: 30px;
   }
 
+
   img {
     width:100%;
     grid-column: 1/-1;
@@ -51,26 +52,48 @@ header {
     }
   }
 
-  #title {
-    width:100%;
-    line-height: 1.5;
-    color:white;
-    margin: auto 100px auto auto;
+
+  #titleContainer {
     z-index: 1000000;
     grid-column: 2/3;
     grid-row:1/2;
+    display:flex;
+    flex-direction: column;
+  }
+
+  #title, #subtitle {
+    width:100%;
+    line-height: 1.5;
+    color:white;
   }
 }
 
-h1 {
-  font-size:40pt;
-  @media(min-width:801px){
-    font-size:35pt;
+  h1#title {
+    margin: auto 100px 0 auto;
+    font-size:40pt;
+    @media(max-width:800px){
+      font-size:28pt;
+    }
+    @media(max-width:1200px){
+      font-size:35pt;
+    }
+
   }
-  @media(max-width:800px){
-    font-size:25pt;
+
+  h1#subtitle {
+    margin: 0 100px auto auto;
+    font-size:30pt;
+    @media(max-width:800px){
+      font-size:20pt;
+    }
+    @media(max-width:1200px){
+      font-size:25pt;
+    }
+
   }
-}
+
+
+
 
 
 /* ---------- main ------------------ */
